alignment issue in the list

--- a/src/styles/components/_qm-table.scss
+++ b/src/styles/components/_qm-table.scss
@@ -30,6 +30,8 @@
          width: $attr-value * 1% ;
          padding-left: 1rem;
          padding-right: 1rem;
+         display: flex;
+         align-items: center;
       }
     }
 }
